<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.jariwher.sunshine.app">

    <!--<CheckBoxPreference
        android:key="example_checkbox"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />
-->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <com.example.jariwher.sunshine.app.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3"
        />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"
        android:defaultValue="@string/pref_unit_default"
        android:entries="@array/pref_unit_titles"
        android:entryValues="@array/pref_unit_values"
        android:summary="%s"
        />
    <ListPreference
        android:title="@string/pref_art_pack_label"
        android:key="@string/pref_art_pack_key"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entryValues="@array/pref_art_pack_values"
        android:entries="@array/pref_art_pack_options"
        android:summary="%s"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
</PreferenceScreen>
